# dual-marker-discovery

./: .env.example  .gitignore  README.md  SESSION_SUMMARY.md  pyproject.toml  render_report.sh
claude_life_science/: README.md
claude_life_science/outputs/: README.md
claude_life_science/scripts/: README.md  cs03_clinical_dual_target.py  cs08_normal_tissue_liabilities.py
claude_life_science/tasks/: cs01_and_gate_methods.md  cs02_not_gate_methods.md  cs03_clinical_dual_target_landscape.md  cs04_validated_single_antigens.md  cs05_single_cell_datasets.md  cs06_proteomics_datasets.md  cs07_antigen_shifts_mcrpc_nepc.md  cs08_normal_tissue_liabilities.md  cs09_statistical_best_practices.md  cs10_review_report.md
docs/: claude_tooling_log.md  hackathon_brief.md  judging_criteria.md  prd.md  research_plan.md  submission_summary.md
reports/: presentation.html  presentation.qmd  references.bib  report.html  report.qmd  theme_dark.scss
reports/styles/: report.css
results/app/: umap.json
results/tables/: analysis_summary.csv  coescape.csv  coescape_extremes.csv  data_manifest.csv  deleaked_sensitivity.csv  doublet_qc.csv  (+22 more)
scripts/: 00_fetch_data.py  01_curate_surface_panel.py  10_prepare_tumor.py  11_prepare_healthy.py  12_export_for_doublets.py  13_doublet_qc.py  14_apply_doublet_removal.py  30_score_pairs_and.py  31_score_pairs_not.py  32_pareto_rank.py  40_positive_control.py  50_protein_evidence.py  55_nominate.py  56_pair_profiles.py  70_threshold_sensitivity.py  71_deleaked_sensitivity.py  72_uncertainty.py  73_coescape.py  74_hupsa_replication.py  90_demo_figures.py  91_export_app_umap.py  doublet_scdblfinder.R  hupsa_extract.R  setup_env.sh  setup_nextflow.sh
tests/: conftest.py  test_pair_scoring.py
(+15 files in other folders)
